[gd_scene load_steps=24 format=3 uid="uid://4phmm8c4qnhk"]

[ext_resource type="Script" path="res://src/Scripts/Entity/Player/player.gd" id="1_fl5uf"]
[ext_resource type="PackedScene" uid="uid://bx7aotlsx1wrg" path="res://src/Scenes/Ammo/Types/rocket.tscn" id="3_donw6"]
[ext_resource type="PackedScene" uid="uid://bxdgygxvbu8vb" path="res://src/Scenes/Ammo/Types/bolt.tscn" id="3_xtik4"]
[ext_resource type="PackedScene" uid="uid://cxcdvxmo7nlpk" path="res://src/Scenes/Ammo/Types/torpedo.tscn" id="4_1yey1"]
[ext_resource type="Texture2D" uid="uid://bx0hrmnrj2tt6" path="res://Assets/Textures/Player/PlayerShootAnimation.png" id="5_ixf48"]
[ext_resource type="AudioStream" uid="uid://uu87udqokpx4" path="res://Assets/Sounds/Player/boltShoot.wav" id="6_m4jld"]
[ext_resource type="AudioStream" uid="uid://b48fd1ur4yg2e" path="res://Assets/Sounds/Player/rocketShoot.wav" id="7_hy016"]
[ext_resource type="AudioStream" uid="uid://crew7t02ho2jy" path="res://Assets/Sounds/Player/torpedoShoot.wav" id="8_66vll"]
[ext_resource type="Texture2D" uid="uid://dshtq1w67p4s1" path="res://Assets/Textures/Player/PlayerDead.png" id="9_yh6tc"]
[ext_resource type="Texture2D" uid="uid://nidboymqb28p" path="res://Assets/Textures/Player/PlayerEngineAnimation.png" id="10_nldux"]
[ext_resource type="Texture2D" uid="uid://ckpd6pe8oyqga" path="res://Assets/Textures/Player/PlayerShieldAnimation.png" id="11_4ok23"]

[sub_resource type="GDScript" id="GDScript_b0ie6"]
script/source = "extends Area2D

const TYPEoFaREA = \"player\"
# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass
"

[sub_resource type="Animation" id="Animation_1ydkb"]
resource_name = "Idle"
length = 0.01
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_kvhs5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D2:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_o7sp0"]
resource_name = "Shooting"
length = 0.56
step = 0.08
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.08, 0.16, 0.24, 0.32),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_sl4wc"]
resource_name = "death"
length = 1.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o1fvy"]
_data = {
"Idle": SubResource("Animation_1ydkb"),
"RESET": SubResource("Animation_kvhs5"),
"Shooting": SubResource("Animation_o7sp0"),
"death": SubResource("Animation_sl4wc")
}

[sub_resource type="Animation" id="Animation_486xw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_gyi4f"]
resource_name = "idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fglam"]
_data = {
"RESET": SubResource("Animation_486xw"),
"idle": SubResource("Animation_gyi4f")
}

[sub_resource type="Animation" id="Animation_t6yt5"]
resource_name = "Idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_dhb7d"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4v3td"]
_data = {
"Idle": SubResource("Animation_t6yt5"),
"RESET": SubResource("Animation_dhb7d")
}

[node name="Player" type="CharacterBody2D" groups=["player"]]
scale = Vector2(0.75, 0.75)
script = ExtResource("1_fl5uf")
bolt = ExtResource("3_xtik4")
rocket = ExtResource("3_donw6")
torped = ExtResource("4_1yey1")

[node name="Area2D" type="Area2D" parent="." groups=["player"]]
script = SubResource("GDScript_b0ie6")

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="Area2D"]
light_mask = 2
visibility_layer = 2
scale = Vector2(1.33333, 1.33333)
polygon = PackedVector2Array(-7.00002, -17, -8.00002, -7.00002, -12, -5.00001, -16, 5.00001, -16, 12, -7.00002, 7.00002, -9.00002, 14, 8.00002, 14, 7.00002, 7.00002, 16, 12, 16, 5.00001, 12, -5.00001, 8.00002, -7.00002, 7.00002, -17)
disabled = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
light_mask = 2
visibility_layer = 2
scale = Vector2(1.33333, 1.33333)
polygon = PackedVector2Array(-7.00002, -17, -8.00002, -7.00002, -12, -5.00001, -16, 5.00001, -16, 12, -7.00002, 7.00002, -9.00002, 14, 8.00002, 14, 7.00002, 7.00002, 16, 12, 16, 5.00001, 12, -5.00001, 8.00002, -7.00002, 7.00002, -17)
disabled = true

[node name="ShootPosition" type="Marker2D" parent="."]
position = Vector2(-12, -16)

[node name="TimerForSecondshoot" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="ShootPosition2" type="Marker2D" parent="."]
position = Vector2(12, -16)

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("5_ixf48")
hframes = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
libraries = {
"": SubResource("AnimationLibrary_o1fvy")
}

[node name="TimeBetweenShoot" type="Timer" parent="."]
wait_time = 2.0

[node name="boltShoot" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_m4jld")
bus = &"Shoots"

[node name="rocketShoot" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_hy016")
bus = &"Shoots"

[node name="torpedoShoot" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_66vll")
bus = &"Shoots"

[node name="Sprite2D2" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("9_yh6tc")
hframes = 16

[node name="Engine" type="AnimationPlayer" parent="."]
root_node = NodePath("../EngineAnim")
autoplay = "idle"
libraries = {
"": SubResource("AnimationLibrary_fglam")
}

[node name="EngineAnim" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("10_nldux")
hframes = 8

[node name="invincibleTimer" type="Timer" parent="."]
one_shot = true

[node name="ShieldPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Shield")
libraries = {
"": SubResource("AnimationLibrary_4v3td")
}

[node name="Shield" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("11_4ok23")
hframes = 8
frame = 1

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="timeout" from="TimerForSecondshoot" to="." method="_on_timer_for_secondshoot_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="TimeBetweenShoot" to="." method="_on_time_between_shoot_timeout"]
[connection signal="timeout" from="invincibleTimer" to="." method="_on_invincible_timer_timeout"]
